[package]
name = "holy_bullet_hell"
version = "0.1.0"
edition = "2021"

[features]
# To use an azerty layout, compile with --features kb_azerty
kb_azerty = []

[dependencies]
cgmath = "0.18.0"
env_logger = "0.10"
error-iter = "0.4"
log = "0.4"
pixels = "0.13"
winit = "0.28"
winit_input_helper = "0.14"
