[package]
name = "holy_bullet_hell"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
env_logger = "0.11"
error-iter = "0.4"
image = "0.25.1"
log = "0.4"
num = "0.4"
pixels = "0.13"
winit = { version = "0.30", default-features = false, features = [
   "rwh_05",
   "x11",
   "wayland",
   "wayland-dlopen",
   "wayland-csd-adwaita",
] }
smol_str = "0.2"
